@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, 2022 Oracle and/or its affiliates.
+ * Copyright (c) 2019, 2023 Oracle and/or its affiliates.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,45 +16,41 @@
 
 package io.helidon.examples.openapi;
 
-import java.util.Collections;
+import java.util.Map;
 
 import io.helidon.common.http.Http;
 import io.helidon.config.Config;
-import io.helidon.reactive.webserver.Routing;
-import io.helidon.reactive.webserver.ServerRequest;
-import io.helidon.reactive.webserver.ServerResponse;
-import io.helidon.reactive.webserver.Service;
+import io.helidon.nima.webserver.http.HttpRules;
+import io.helidon.nima.webserver.http.HttpService;
+import io.helidon.nima.webserver.http.ServerRequest;
+import io.helidon.nima.webserver.http.ServerResponse;
 
 import jakarta.json.Json;
 import jakarta.json.JsonBuilderFactory;
 import jakarta.json.JsonObject;
-import jakarta.json.JsonReaderFactory;
 
 /**
  * A simple service to greet you. Examples:
- *
+ * <p>
  * Get default greeting message:
  * curl -X GET http://localhost:8080/greet
- *
+ * <p>
  * Get greeting message for Joe:
  * curl -X GET http://localhost:8080/greet/Joe
- *
+ * <p>
  * Change greeting
  * curl -X PUT -H "Content-Type: application/json" -d '{"greeting" : "Howdy"}' http://localhost:8080/greet/greeting
- *
+ * <p>
  * The message is returned as a JSON object
  */
-
-public class GreetService implements Service {
+public class GreetService implements HttpService {
 
     /**
      * The config value for the key {@code greeting}.
      */
     private String greeting;
 
-    private static final JsonBuilderFactory JSON_BF = Json.createBuilderFactory(Collections.emptyMap());
-
-    private static final JsonReaderFactory JSON_RF = Json.createReaderFactory(Collections.emptyMap());
+    private static final JsonBuilderFactory JSON_BF = Json.createBuilderFactory(Map.of());
 
     GreetService(Config config) {
         this.greeting = config.get("app.greeting").asString().orElse("Ciao");
@@ -62,34 +58,36 @@ public class GreetService implements Service {
 
     /**
      * A service registers itself by updating the routine rules.
+     *
      * @param rules the routing rules.
      */
     @Override
-    public void update(Routing.Rules rules) {
-        rules
-            .get("/", this::getDefaultMessageHandler)
-            .get("/{name}", this::getMessageHandler)
-            .put("/greeting", this::updateGreetingHandler);
+    public void routing(HttpRules rules) {
+        rules.get("/", this::getDefaultMessageHandler)
+                .get("/{name}", this::getMessageHandler)
+                .put("/greeting", this::updateGreetingHandler);
     }
 
     /**
      * Return a worldly greeting message.
-     * @param request the server request
+     *
+     * @param request  the server request
      * @param response the server response
      */
     private void getDefaultMessageHandler(ServerRequest request,
-                                   ServerResponse response) {
+                                          ServerResponse response) {
         sendResponse(response, "World");
     }
 
     /**
      * Return a greeting message using the name that was provided.
-     * @param request the server request
+     *
+     * @param request  the server request
      * @param response the server response
      */
     private void getMessageHandler(ServerRequest request,
-                            ServerResponse response) {
-        String name = request.path().param("name");
+                                   ServerResponse response) {
+        String name = request.path().pathParameters().value("name");
         sendResponse(response, name);
     }
 
@@ -99,7 +97,6 @@ public class GreetService implements Service {
     }
 
     private void updateGreetingFromJson(JsonObject jo, ServerResponse response) {
-
         if (!jo.containsKey(GreetingMessage.JSON_LABEL)) {
             JsonObject jsonErrorObject = JSON_BF.createObjectBuilder()
                     .add("error", "No greeting provided")
@@ -115,12 +112,14 @@ public class GreetService implements Service {
 
     /**
      * Set the greeting to use in future messages.
-     * @param request the server request
+     *
+     * @param request  the server request
      * @param response the server response
      */
     private void updateGreetingHandler(ServerRequest request,
                                        ServerResponse response) {
-        request.content().as(JsonObject.class).thenAccept(jo -> updateGreetingFromJson(jo, response));
+        JsonObject jo = request.content().as(JsonObject.class);
+        updateGreetingFromJson(jo, response);
     }
 
 }
